# condor

./: Cargo.toml  README.md  todo.txt
src/: lib.rs  tensor.rs  tensorboard.rs  tests.rs  utils.rs
src/modules/: activation.rs  linear.rs  mod.rs  nnmodule.rs  other.rs  rnn.rs  sequential.rs  tests.rs  transformer.rs
src/modules/transformer/: base.rs  decoder.rs  encoder.rs  lm.rs  mod.rs  seq2seq.rs  tests.rs
src/other_crates/: mod.rs
src/other_crates/indicatif/: draw_target.rs  iter.rs  mod.rs  progress_bar.rs  state.rs  style.rs
src/tensor/: mod.rs  tests.rs
src/tensor/ops/: elementwise.rs  matmul.rs  mod.rs  reshape.rs  scalar.rs
