[package]
name = "condor"
version = "0.1.3"
edition = "2018"
description = "Condor is an ergonomic wrapper around the tch library for Rust."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.5.0"
num = "0.2.1"
rand = "0.8.3"

# For indicatif
regex = { version = "1.3.1", default-features = false, features = ["std"] }
lazy_static = "1.0"
number_prefix = "0.4"
console = { version = ">=0.9.1, <1.0.0", default-features = false }
unicode-segmentation = { version = "1.6.0", optional = true }
unicode-width = { version = "0.1.7", optional = true }
rayon = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.8"
structopt = "0.3"
tokio = { version = "1.0", features = ["time", "rt"] }