[package]
name = "condor"
version = "0.1.6"
edition = "2018"
description = "Condor is an ergonomic wrapper around the tch library for Rust."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.5.0"
num = "0.2.1"
rand = "0.8.3"
indicatif = "0.17.0-rc.1"

[dev-dependencies]
rand = "0.8"
structopt = "0.3"
tokio = { version = "1.0", features = ["time", "rt"] }